<resources>
    <string name="app_name">CRUZ VERMELHA</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Login</string>
    <string name="formapagamento">Escolha a forma de pagamento</string>
    <string name="valordoacao">Valor Doação</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Usuario e Senha Incorretos</string>
    <string name="error_field_required">Campo Obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="aguarde">Aguarde.....</string>
    <string name="registrado">Registrado Com Sucesso</string>
    <string name="erro">Tente Novamente</string>
    <string name="ok">OK</string>
    <string name="sair_app">Sair do Aplicativo?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="erro_cadastro_usu">Erro ao cadastrar Usuario !</string>
    <string name="esqueceu_senha">Esqueceu sua senha</string>
    <string name="cadastrese">Cadastre-se</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="dataNascimento">Data Nascimento</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="endereco">Endereço</string>
    <string name="confirma">Confirma</string>
    <string name="txtDialogSair">Tem certeza de que deseja sair ?</string>
    <string name="confirmaSenha">Confirme a Senha</string>
    <string name="email">Email</string>
    <string name="senhaDif">Senha diferente</string>
    <string name="ola">Olá é sua primeira vez ? - Informe seus dados</string>
    <string name="senhaEnviada">Senha enviada para seu email !</string>
    <string name="indicar">
        "Baixe o aplicativo da Cruz Vermelha Brasileira e conheça os projetos que estão ajudando milhares de pessoas em todo o Brasil.  Ao auxiliar a instituição, você ainda tem descontos em diversas lojas conveniadas !  "
        \n\n Versão Android - Play Store - xxxxxxxxxxxx link
        \n\n Versão IOS - Apple Store - xxxxxxxxxxxxxx  link
    </string>
    <string name="info">A Cruz Vermelha é a mais importante organização humanitária do mundo e reúne 97 milhões de voluntários em todo o planeta. A instituição é neutra, imparcial e não está vinculada a qualquer Estado.\n\n  Seu objetivo é proteger a vida e a saúde humana, sem discriminação de nacionalidade, raça, sexo, religião, classe social ou opiniões políticas.\n\n

Foi fundada em 1863 na Genebra, Suíça, por Jean Henry Dunant, que 38 anos mais tarde tornou-se o primeiro ganhador do prêmio Nobel da Paz.\n\n

Ao todo são 190 Sociedades Nacionais de Cruz Vermelha no mundo atuando sob sete Princípios Fundamentais:\n
    </string>

    <string name="humildade">1.    Humanidade</string>
    <string name="imparcialidade">2.    Imparcialidade</string>
    <string name="neutralidade">3.    Neutralidade</string>
    <string name="independencia">4.    Independência</string>
    <string name="voluntariado">5.    Voluntariado</string>
    <string name="unidade">6.    Unidade</string>
    <string name="universalidade">7.    Universalidade</string>
    <string name="fimInfo">Sua missão, exclusivamente humanitária, é proteger a vida e a dignidade das vítimas de conflitos armados e outras situações de violência, assim como prestar-lhes assistência.\n\n

Cruz Vermelha Brasileira\n\n

A Cruz Vermelha Brasileira é uma sociedade civil filantrópica, sem fins lucrativos de Utilidade Pública Federal, fundada em 1907, que através de suas filiais em todo território nacional busca proteger a vida e a integridade de todos.\n\n

No Brasil atua não só com a missão de agir humanitariamente em favor de todas as vítimas de guerra, mas também trabalha pela melhoria de saúde, prevenção de doenças e organização de serviços de socorros em emergências às vítimas de calamidades, seja qual for a causa.</string>


</resources>
